# giraffe

./: README.md
giraffe/: .gitignore  .pylintrc  Makefile  README.md  gen_lagrange_sv.py  pws_info.py  run_giraffe.py  run_giraffe_sv.py
giraffe/giraffelib/: __init__.py  arithcircuit.py  arithcircuitbuilder.py  circuitprover.py  circuitverifier.py  defs.py  gateprover.py  layercompute.py  layerprover.py  parse_pws.py  randutil.py  util.py
giraffe/giraffetempl/: __init__.py  computation.py  computation_layer_template.sv  prover.py  prover_layer_template.sv  prover_shim_template.sv  util.py  verifier.py  verifier_input_template.sv  verifier_layer_template.sv  verifier_output_template.sv
giraffe/giraffetests/: __init__.py  __main__.py  circuit.py  compute_beta.py  compute_v.py  iomlext.py  layer.py  verifier.py
giraffe/pypws/: __init__.py
giraffe/vpintf/: __init__.py  clients.py  defs.py  socket_nb.py  util.py
libpws/: .gitignore  Makefile.am  README.md  configure.ac
libpws/src/: Makefile.am
libpws/src/circuit/: Makefile.am  circuit.cc  circuit.hh  circuit_data.cc  circuit_data.hh  circuit_layer.cc  circuit_layer.hh  cmt_circuit.cc  cmt_circuit.hh  cmt_circuit_builder.cc  cmt_circuit_builder.hh  debug_utils.hh  magic_var_operation.cc  magic_var_operation.hh  math.cc  math.hh  maybe.hh  mpnclass.cc  mpnclass.hh  mpnops.cc  mpnops.hh  mpnvector.cc  mpnvector.hh  poly_utils.cc  poly_utils.hh  prng.cc  prng.hh  pws_circuit.cc  pws_circuit.hh  pws_circuit_parser.cc  pws_circuit_parser.hh  pws_primitives.hh  tokenizer.hh  util.h  utility.cc  utility.hh
libpws/src/pws2sv/: .gitignore  Makefile.am  pws2sv.cc
libpws/src/pws2svg/: .gitignore  Makefile.am  pws2svg.cc  pws2svg.hh
libpws/src/pwsrepeat/: .gitignore  Makefile.am  pwsrepeat.cc
libpws/src/pylibpws/: Makefile.am  pylibpwsmodule.cc
libpws/src/tests/: .gitignore  Makefile.am  pws2sv.test  pws2svg.test  pws_circuit_test.cc  simple4.test
pws/: .gitignore  convopt.py  ntt.py  nttopt.py  rep_curveblk.py
sim/common/: Makefile
sim/common/func/: func_convertIntMtoL.sv  func_gateInNum.sv  func_ithLagrangeCoeffs.sv  func_leastSetBitPosn.sv  func_lvlNumInputs.sv
sim/common/rtl/: computation_gatefn.sv  computation_layer.sv  computation_layer_elem.sv  field_adder.sv  field_arith_defs.v  field_arith_ns.sv  field_double.sv  field_halve.sv  field_multiplier.sv  field_mux.sv  field_negate.sv  field_negate_or_double.sv  field_one_minus.sv  field_subtract.sv  gatefn_defs.v  lagrange_coeffs.sv  lagrange_interpolate.sv  pergate_compute_gatefn.sv  pergate_compute_gatefn_early.sv  pergate_compute_late.sv  prover_adder_tree_pl.sv  prover_compute_chi.sv  prover_compute_h.sv  prover_compute_h_accum.sv  prover_compute_h_chi.sv  prover_compute_h_mulonly.sv  prover_compute_h_parmux.sv  prover_compute_h_percopy.sv  prover_compute_v_early.sv  prover_compute_v_early_gates.sv  prover_compute_v_early_gatesbank.sv  prover_compute_v_encollect.sv  prover_compute_v_late.sv  prover_compute_v_late_gates.sv  prover_compute_v_sr.sv  prover_compute_v_srbank.sv  prover_compute_v_srelem.sv  prover_compute_v_valsbank.sv  prover_compute_w0.sv  prover_compute_w0_elem.sv  (+24 more)
sim/common/tb/: field_halve_test.sv  lagrange_interpolate_test.sv  pergate_compute_gatefn_early_test.sv  prover_adder_tree_pl_test.sv  prover_compute_chi_test.sv  prover_compute_h_chi_test.sv  prover_compute_h_percopy_test.sv  prover_compute_h_test.sv  prover_compute_v_early_gates_test.sv  prover_compute_v_early_gatesbank_test.sv  prover_compute_v_encollect_test.sv  prover_compute_v_late_gates_test.sv  prover_compute_v_sr_test.sv  prover_compute_v_srbank_test.sv  prover_compute_w0_test.sv  prover_interpolate_cubic_test.sv  prover_interpolate_qc_test.sv  prover_interpolate_quadratic_test.sv  prover_layer_test.sv  prover_lsb_posn_test.sv  prover_shim_test.sv  prover_shuffle_early_test.sv  prover_shuffle_v_test.sv  simple_adder_tree_test.sv  sram_generic_test.sv  verifier_adder_tree_test.sv  verifier_compute_beta_test.sv  verifier_compute_chi_dotp_test.sv  verifier_compute_chi_single_test.sv  verifier_compute_chi_test.sv  verifier_compute_horner_test.sv  verifier_compute_io_test.sv  verifier_compute_wpreds_test.sv  verifier_layer_test.sv  vpintf_test.sv
sim/common/vpi/: arith.c  arith.h  util.h  vpintf.c  vpintf.h
sim/icarus/: .gitignore  Makefile
sim/icarus/rtl/: .gitignore  Makefile  arith.sft  computation_layer_elem.sv  field_halve.sv  field_halve_test.sv  func_convertIntMtoL.sv  func_gateInNum.sv  func_ithLagrangeCoeffs.sv  func_leastSetBitPosn.sv  func_lvlNumInputs.sv  lagrange_coeffs.sv  lagrange_interpolate.sv  lagrange_interpolate_test.sv  pergate_compute_gatefn_early.sv  pergate_compute_gatefn_early_test.sv  pergate_compute_late.sv  prover_compute_chi.sv  prover_compute_chi_test.sv  prover_compute_h_accum.sv  prover_compute_h_chi.sv  prover_compute_h_chi_test.sv  prover_compute_h_mulonly.sv  prover_compute_h_parmux.sv  prover_compute_h_percopy.sv  prover_compute_h_percopy_test.sv  prover_compute_v_early.sv  prover_compute_v_early_gates.sv  prover_compute_v_early_gates_test.sv  prover_compute_v_early_gatesbank.sv  prover_compute_v_early_gatesbank_test.sv  prover_compute_v_encollect.sv  prover_compute_v_encollect_test.sv  prover_compute_v_late.sv  prover_compute_v_late_gates.sv  prover_compute_v_late_gates_test.sv  prover_compute_v_sr.sv  prover_compute_v_sr_test.sv  prover_compute_v_srbank.sv  (+39 more)
(+3 files in other folders)
