AM_CPPFLAGS = $(OpenSSL_CFLAGS)
AM_CXXFLAGS = $(GLOBAL_CXXFLAGS) $(OPT_CXXFLAGS)

lib_LTLIBRARIES = libcircuit.la

libcircuit_la_SOURCES = circuit.cc circuit.hh \
						circuit_data.cc circuit_data.hh \
						circuit_layer.cc circuit_layer.hh \
						cmt_circuit.cc cmt_circuit.hh \
						magic_var_operation.cc magic_var_operation.hh \
						pws_circuit.cc pws_circuit.hh \
						pws_circuit_parser.cc pws_circuit_parser.hh \
						cmt_circuit_builder.cc cmt_circuit_builder.hh \
						mpnclass.cc mpnclass.hh \
						mpnops.cc mpnops.hh \
						mpnvector.cc mpnvector.hh \
						utility.cc utility.hh \
						math.cc math.hh \
						poly_utils.cc poly_utils.hh \
						prng.cc prng.hh
